--- a/hksAPI/hksAPI.csproj
+++ b/hksAPI/hksAPI.csproj
@@ -9,9 +9,12 @@
   <ItemGroup>
     <PackageReference Include="itext7" Version="8.0.2" />
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.26" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.5" />
     <PackageReference Include="PDFsharp" Version="6.0.0" />
     <PackageReference Include="PdfSharpCore" Version="1.3.62" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.0" />
   </ItemGroup>
 
 </Project>
